avcodec/libx265: enable psnr reporting when requested by the user

This is similar to what is done in libx264.c

Fixes Ticket3567

Signed-off-by: Michael Niedermayer <michaelni@gmx.at>